# PharaGlow

./: AnalysisParameters_1x  AnalysisParameters_1x.json  CHANGELOG.txt  README.md  environmentPumping.yml  old_README.md  pyproject.toml  requirements.txt  running_pharaglow_jupyterlab.md  setup.cfg  setup.py  trackPharynx.py
.github/workflows/: publish.yml  test_package.yml
data/: .gitattributes  TestData_T000.tif  TestData_T001.tif  TestData_T002.tif  TestData_T003.tif  TestData_T004.tif  TestData_T005.tif  TestData_T006.tif  TestData_T007.tif  TestData_T008.tif  TestData_T009.tif  TestData_T010.tif  TestData_T011.tif  TestData_T012.tif  TestData_T013.tif  TestData_T014.tif  TestData_T015.tif  TestData_T016.tif  TestData_T017.tif  TestData_T018.tif  TestData_T019.tif  TestData_T020.tif  TestData_T021.tif  TestData_T022.tif  TestData_T023.tif  TestData_T024.tif  TestData_T025.tif  TestData_T026.tif  TestData_T027.tif  TestData_T028.tif  TestData_T029.tif  TestData_T030.tif  TestData_T031.tif  TestData_T032.tif  TestData_T033.tif  TestData_T034.tif  TestData_T035.tif  TestData_T036.tif  TestData_T037.tif  TestData_T038.tif  (+761 more)
docs/: Makefile  make.bat
docs/source/: conf.py  modules.rst  pharaglow.rst
notebooks/: BatchRunTemplate.ipynb  PharaGlowHPC.ipynb  PharaGlowMain.ipynb  RunningPharaglow.ipynb  RunningPharaglowParallel-MV.ipynb  RunningPharaglowParallel.ipynb  VisualizeResults.ipynb  make_conf_file.py  pglow_batch_config.json  pglow_batch_config_testing.json  runBatch.py  runBatchParallel.py  runPGlow_HPC.py
notebooks/cluster/: PharaGlowHPC.ipynb  pglow_batch_config.json  runPGlow_HPC.py
pharaglow/: __init__.py  extract.py  features.py  io.py  run.py  tracking.py  util.py
testing/: PharaGlowMain_testdata.ipynb  pglow_batch_config_testing.json  runPGlow_testdata.py
