[project]
name = "pharaglow"
dynamic = ["version"]
description = "A toolset to analyze videos of foraging animals."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["toolset", "tracking", "feeding", "behaviour", "pumping"]
authors = [
  {name = "M.Scholz", email = "monika.k.scholz@gmail.com" }
]
maintainers = [
  {name = "Omar Valerio", email = "omar.valerio@mpinb.mpg.de" }
]
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [

  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
# NOTE: dependencies moved to setup.cfg file (see install_requires)
# For auto generating requirements.txt use:
# python -m pip install --upgrade pip
# python -m pip install pip-tools; pip-compile -o requirements.txt pyproject.toml
# python -m pip install pip-tools; pip-compile -o requirements.txt setup.cfg

# List URLs that are relevant to the project
# The key is what's used to render the link text on PyPI.
[project.urls]
"PharaGlow Homepage" = "https://github.com/scholz-lab/PharaGlow"
"Bug Reports" = "https://github.com/scholz-lab/PharaGlow/issues"
"Source" = "https://github.com/scholz-lab/PharaGlow"
"API Reference" = "https://scholz-lab.github.io/PharaGlow/build/html/pharaglow.html"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61.0.0", "wheel", "attrs>=17.1"]
build-backend = "setuptools.build_meta"
