[metadata]
name = pharaglow
version = attr: pharaglow.__version__
author = M.Scholz
author_email = monika.k.scholz@gmail.com
maintainer = Omar Valerio
maintainer_email = omar.valerio@mpinb.mpg.de
url = https://github.com/scholz-lab/PharaGlow
description = A toolset to analyze videos of foraging animals.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = toolset, tracking, feeding, behaviour, pumping
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    scipy
    pyampd
    pandas
    pillow>=10.0.1 # explicit dependency  [CVE-2023-5129](https://github.com/advisories/GHSA-hhrh-69hc-fgg7)
    pims
    scikit-image
    trackpy
    papermill
    matplotlib
    ipykernel
    imagecodecs

[options.package_data]
notebooks = notebooks/*.json, *.ipynb
* = README.md